<resources>
    <string name="app_name">Holat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="dialog_ok">Ok</string>
    <string name="connect_to_internet">Connect to internet</string>
    <string name="connection_timed_out">Connection timed out</string>
    <string name="something_wrong_here">Something wrong here</string>
    <string name="version_no">Version No \n  ( %1$s )</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error. </string>
    <string name="messages">Messages</string>
    <string name="info_dialog_title">Information</string>
    <string name="no_data_fount">No Data Found !</string>
    <string name="username">Username</string>
    <string name="nationalId">National Id</string>
    <string name="notification_channel_id">1</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="data1">Customers of banks, insurance companies and finance companies can submit a complaint to the Central Bank of Saudi Arabia through the Customer Protection Department, using the channels described below.</string>
    <string name="nafaz_text">You can log in using the \n “National Single Sign-On” access method.</string>
    <string name="language">عربي</string>
    <string name="login_with_nafaz_text">Log in via Nafaz</string>
    <string name="id">Id Number</string>
    <string name="login_with_sama_text">Log in via Sama</string>
    <string name="confirm_code">Confirmation code</string>
    <string name="confirm_text">You will receive a text message containing the verification number\n on the number</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">Resend code</string>
    <string name="nafaz_text_code">Please open the “National Unified Access” \n application and confirm the request by choosing the number above</string>
    <string name="order_completed">Order status: The order time has completed</string>
    <string name="order_waiting">Order status: The order time has waiting</string>
    <string name="order_expired">Order status: The order time has expired</string>
    <string name="complaint">Escalate the complaint</string>
    <string name="complaint_up">You can escalate the complaint if there is/n no solution to the problem</string>
    <string name="details">Details</string>
    <string name="add_attachment">Add attachment</string>
    <string name="upload_attachment">You can upload an image or PDF file with a maximum of 2 MB per file,\n with a total of 5 files</string>
    <string name="select_files">Select files</string>
    <string name="send">Send</string>
    <string name="send_reply">Send reply</string>
    <string name="you_satisfied">Are you satisfied with the level of service?</string>
    <string name="main">Main</string>
    <string name="title_sama">Sama</string>
    <string name="title_orders">Orders</string>
    <string name="title_my_account">My account</string>
    <string name="title_change_data">Change data</string>
    <string name="search">Search</string>
    <string name="text_total_compliant">Total complaints submitted</string>
    <string name="number_compliant">Number Complaint</string>
    <string name="required">Required</string>
    <string name="name_required_one_later">Name field please enter minimum 1 letters</string>

    <string name="error_date_of_birth">Date of birth required</string>
    <string name="error_date_of_expired_date">ID Expiry Date required</string>

    <string name="err_id_number_not_equal_10_numbers">Id Number must equal 10 numbers</string>
    <string name="err_phone_number_not_correct">Please enter a valid mobile number</string>

    <string name="create_account">Create an account </string>
    <string name="phone_number">Phone number</string>
    <string name="national_type">National Type</string>
    <string name="error_national_type">Please select a valid ID type from the dropdown list.</string>
    <string name="error_country_name">Please select a Country.</string>
    <string name="error_region_name">Please select a Region.</string>
    <string name="error_city_name">Please select a City.</string>
    <string name="email">Email</string>
    <string name="error_email">Email should follow the format \'user@example.com\'."</string>
    <string name="captcha_required">Enter the CAPTCHA characters.</string>

    <string name="date_of_birth">Date Of Birth</string>
    <string name="date_of_expired_id">ID Expiry Date</string>
    <string name="check_code">Check Code</string>
    <string name="error_save_database">Error happened when We save data in database.</string>
    <string name="remember_my">remember My</string>
    <string name="exit">Exit</string>
    <string name="warning_exit_app">Do you want exit from the app?</string>

    <string name="logout">LogOut</string>
    <string name="err_session_expired">Your session was expired, Please login again</string>
    <string name="notification">Notification</string>
    <string name="wellcome">wellcome</string>
    <string name="who_are_we">who are we</string>
    <string name="information_bank">Information bank </string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="label_english">English</string>
    <string name="label_arabic">عربي</string>
    <string name="address">Address</string>
    <string name="change_password">Change password</string>
    <string name="control_your_data">Control in your data</string>
    <string name="change_information">Change your information</string>
    <string name="change_language">Change language</string>
    <string name="post_box">Post box</string>
    <string name="fax">Fax</string>
    <string name="error_language_en">The existing language is English</string>
    <string name="error_language_ar">The existing language is Arabic</string>
    <string name="error_ticket">The complaint number must be written firstً</string>
    <string name="ticket_details">Ticket details</string>
    <string name="file_name">File name</string>
    <string name="file_size">File Size</string>
    <string name="party">party</string>
    <string name="product">Product</string>
    <string name="sector">Sector</string>
    <string name="party_response">Party Response</string>

    <string name="digits_text"> abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ  دجحخهعغفقثصضشسيبلاتنمكطظزوةىلارؤءئ</string>
    <string name="digits_text_and_numbers"> abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789</string>
    <string name="submit_complaint">Submit complaint</string>
    <string name="digits_numbers">0123456789</string>
    <string name="select">Select</string>
    <string name="empty_fields">Empty fields</string>
    <string name="personal_file">Personal File</string>
    <string name="camera">Camera</string>
    <string name="do_you_want_remove">Do you want exit from the app?</string>
    <string name="you_excced_max_limit">You have exceeded the limit of the files</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="message_storage_permission">Storage permission is needed in order to show images and videos</string>
    <string name="read_media_storage_denied">Read media storage permission denied!</string>
    <string name="send_successfully">The request has been sent successfully</string>
    <string name="update_successfully">The profile edited successfully</string>
    <string name="complaint_number">Complaint number</string>
    <string name="close">Closed</string>
    <string name="new_">New</string>
    <string name="under_apply">Under Process</string>
    <string name="under_process">Under Process</string>

    <string name="date">Date</string>
    <string name="gallery">Gallery</string>
    <string name="responses">Responses</string>
    <string name="escalation">Escalation</string>
    <string name="close_">Close</string>
    <string name="rate">Rate</string>
    <string name="kb">( %1$s ) KB</string>
    <string name="select_country">Select a country</string>
    <string name="select_region">Select a region</string>
    <string name="select_city">Select a city</string>
    <string name="update">Update</string>

</resources>