<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResponses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:textAlignment="center"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/sendBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".0"
        tools:listitem="@layout/custom_row_customer_response"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupEmptyPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="includeEmptyPage"/>
    <include
        android:id="@+id/includeEmptyPage"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        layout="@layout/custom_empty_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendBtn"
        style="@style/AppCompatButtonGreenNoMargin"
        android:text="@string/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/closeBtn"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeBtn"
        style="@style/AppCompatButtonGreenNoMargin"
        android:text="@string/close_"
        android:layout_marginBottom="@dimen/_22sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/escalationBtn"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/escalationBtn"
        style="@style/AppCompatButtonRed"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/escalation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/rateBtn"
        style="@style/AppCompatButtonRed"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/rate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>